--- a/index.html
+++ b/index.html
@@ -59,9 +59,26 @@
           </ul>
         </div>
       </div>
-
-      <div class="second w-full border border-x-white border-solid border-y-black">
-        j
+      
+      <div class="second w-full border border-x-white border-solid border-y-black ">
+        <div class="top flex p-3 relative">
+          <div class="absolute w-10 h-1 bottom-0 bg-blue-600 rounded-full left-[20%] z-10"></div>
+          <div class="left w-1/2 flex justify-center font-bold text-lg">For You</div>
+          <div class="right w-1/2 flex justify-center font-bold text-lg">Following</div>
+          <div class="settings m-1"><img src="img/settings.svg" alt=""></div>
+          
+        </div>
+        <div class="h-[1px] w-full bg-gray-600"></div>
+        <div class="whatshapp flex gap-2">
+          <div class="img m-2">
+            <img class="  rounded-full border border-white" src="https://pbs.twimg.com/profile_images/1850316264604102656/TqX7z7aj_bigger.jpg" alt="ankur ashish">
+          </div>
+          <input class="w-full bg-black text-white mx-5 outline-none text-xl" type="text" placeholder="What is happening?!">
+        </div>
+        <div class="text-blue-700 flex items-center gap-2 m-3">
+          <img class="" src="img/globe.svg" alt="">
+          <span class="" >Everyone can reply</span>
+        </div>
       </div>
 
       <div class="third w-full ">
@@ -75,7 +92,7 @@
             <div class=" text-sm text-gray-200">
               Trending in India
             </div>
-            <div class="font-bold">#Orgy</div>
+            <div class="font-bold">#LoveYouChamar</div>
             <div class="text-sm text-gray-200">40.2k Posts</div>
           </div>
           <div class="item px-4 p-3 hover:bg-gray-800 cursor-pointer">
