--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       href="https://x.com/favicon.ico"
       type="image/x-icon"
     />
-    <link rel="stylesheet" href="./src/input.css" />
+    <link rel="stylesheet" href="./src/output.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined"
       rel="stylesheet"
